--- a/app/src/main/res/layout/reviews_item.xml
+++ b/app/src/main/res/layout/reviews_item.xml
@@ -12,6 +12,7 @@
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
+    android:stateListAnimator="@animator/elevation"
     app:contentPadding="8dp"
     app:cardElevation="2dp">
 
