--- a/app/src/main/res/layout/error_screen.xml
+++ b/app/src/main/res/layout/error_screen.xml
@@ -4,10 +4,19 @@
     android:id="@+id/error_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:visibility="gone">
 
     <TextView
         android:id="@+id/error_text_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/retry_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:padding="8dp"
+        android:text="@string/retry"/>
 </LinearLayout>
