--- a/app/src/main/res/layout/recycler_load_more.xml
+++ b/app/src/main/res/layout/recycler_load_more.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="100dp"
+    android:gravity="center">
 
     <ProgressBar
         android:id="@+id/load_more_progress_bar"
