--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,8 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
+        <include layout="@layout/progress_screen"/>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/books_recycler_view"
             android:layout_width="match_parent"
