Manage config changes and screen states

--- a/app/src/main/res/layout/fragment_find_books.xml
+++ b/app/src/main/res/layout/fragment_find_books.xml
@@ -29,13 +29,16 @@
 
     </LinearLayout>
 
+    <include layout="@layout/default_screen"/>
+
     <include layout="@layout/progress_screen"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/find_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical"
+        android:visibility="gone"/>
 
     <include layout="@layout/error_screen"/>
 
