--- a/app/src/main/res/layout/error_screen.xml
+++ b/app/src/main/res/layout/error_screen.xml
@@ -10,7 +10,8 @@
     <TextView
         android:id="@+id/error_text_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/connection_issues"/>
 
     <Button
         android:id="@+id/retry_button"
