--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -9,5 +9,8 @@
         <item
             android:id="@+id/nav_find_books"
             android:title="@string/find_books"/>
+        <item
+            android:id="@+id/nav_author_info"
+            android:title="@string/author_info"/>
     </group>
 </menu>
