--- a/app/src/main/res/layout/fragment_author_info.xml
+++ b/app/src/main/res/layout/fragment_author_info.xml
@@ -47,9 +47,45 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/id_text_view"
-                android:layout_width="wrap_content"
+                android:id="@+id/author_info_name"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/author_info_about"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/details_margin"/>
+
+            <TextView
+                android:id="@+id/author_info_works_count"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/details_margin"/>
+
+            <TextView
+                android:id="@+id/author_info_gender"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/details_margin"/>
+
+            <TextView
+                android:id="@+id/author_info_hometown"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/details_margin"/>
+
+            <TextView
+                android:id="@+id/author_info_born_at"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/details_margin"/>
+
+            <TextView
+                android:id="@+id/author_info_died_at"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/details_margin"/>
 
         </LinearLayout>
     </ScrollView>
