--- a/app/src/main/res/layout/fragment_author_info.xml
+++ b/app/src/main/res/layout/fragment_author_info.xml
@@ -49,7 +49,8 @@
             <TextView
                 android:id="@+id/author_info_name"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/author_info_about"
