Adding the footer

--- a/app/src/main/res/layout/book_details.xml
+++ b/app/src/main/res/layout/book_details.xml
@@ -55,5 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/details_margin"/>
 
+        <include layout="@layout/footer"/>
+
     </LinearLayout>
 </ScrollView>
