--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -113,5 +113,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/details_margin"/>
 
+        <include layout="@layout/footer"/>
+
     </LinearLayout>
 </ScrollView>
