--- a/app/src/main/res/layout/fragment_author_info.xml
+++ b/app/src/main/res/layout/fragment_author_info.xml
@@ -90,6 +90,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/details_margin"/>
 
+            <include layout="@layout/footer"/>
+
         </LinearLayout>
     </ScrollView>
 
