--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -113,6 +113,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/details_margin"/>
 
+        <TextView
+            android:id="@+id/review_details_link"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/details_margin"/>
+
         <include layout="@layout/footer"/>
 
     </LinearLayout>
