UI changes in book and author details

--- a/app/src/main/res/layout/book_details.xml
+++ b/app/src/main/res/layout/book_details.xml
@@ -13,17 +13,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
-        <TextView
-            android:id="@+id/book_details_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/book_details_author"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/details_margin"/>
+        <include layout="@layout/details_header"/>
 
         <TextView
             android:id="@+id/book_details_publication_date"
