--- a/app/src/main/res/layout/fragment_find_books.xml
+++ b/app/src/main/res/layout/fragment_find_books.xml
@@ -28,6 +28,7 @@
             android:id="@+id/find_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_shape"
             android:text="@string/find"/>
 
     </LinearLayout>
