--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.insight.view.MainActivity">
+    tools:context="com.codevariant.insight.view.MainActivity">
 
     <LinearLayout
         android:id="@+id/main_content"
