--- a/app/src/main/res/layout/fragment_author_info.xml
+++ b/app/src/main/res/layout/fragment_author_info.xml
@@ -24,6 +24,8 @@
             android:layout_weight="5"
             android:hint="@string/author_info_name"
             android:inputType="text"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:imeOptions="actionDone"/>
 
         <Button
