--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,143 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/bgColor"
-    android:gravity="center_horizontal">
+    android:background="@color/bgColor">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/home_find_books"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:stateListAnimator="@animator/elevation"
-        app:contentPadding="@dimen/activity_vertical_margin"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="@dimen/activity_vertical_margin">
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:gravity="center_horizontal">
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/home_find_books"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:stateListAnimator="@animator/elevation"
+            app:contentPadding="@dimen/activity_vertical_margin"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="@dimen/activity_vertical_margin">
 
-            <TextView
-                android:id="@+id/find_books_title"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                android:textStyle="bold"
-                android:text="@string/find_books"/>
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/find_books_desc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-                android:text="@string/home_find_books_desc"/>
+                <TextView
+                    android:id="@+id/find_books_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:textStyle="bold"
+                    android:text="@string/find_books"/>
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/find_books_desc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                    android:text="@string/home_find_books_desc"/>
 
-    </android.support.v7.widget.CardView>
+            </LinearLayout>
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/home_author_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginBottom="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:stateListAnimator="@animator/elevation"
-        android:layout_below="@id/home_find_books"
-        app:contentPadding="@dimen/activity_vertical_margin"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="@dimen/activity_vertical_margin">
+        </android.support.v7.widget.CardView>
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/home_author_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:stateListAnimator="@animator/elevation"
+            app:contentPadding="@dimen/activity_vertical_margin"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="@dimen/activity_vertical_margin">
 
-            <TextView
-                android:id="@+id/author_info_title"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                android:textStyle="bold"
-                android:text="@string/author_info"/>
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/author_info_desc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-                android:text="@string/home_author_info_desc"/>
+                <TextView
+                    android:id="@+id/author_info_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:textStyle="bold"
+                    android:text="@string/author_info"/>
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/author_info_desc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                    android:text="@string/home_author_info_desc"/>
 
-    </android.support.v7.widget.CardView>
+            </LinearLayout>
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/home_recent_reviews"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginBottom="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:stateListAnimator="@animator/elevation"
-        android:layout_below="@id/home_author_info"
-        app:contentPadding="@dimen/activity_vertical_margin"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="@dimen/activity_vertical_margin">
+        </android.support.v7.widget.CardView>
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/home_recent_reviews"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:stateListAnimator="@animator/elevation"
+            app:contentPadding="@dimen/activity_vertical_margin"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="@dimen/activity_vertical_margin">
 
-            <TextView
-                android:id="@+id/recent_reviews_title"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                android:textStyle="bold"
-                android:text="@string/recent_reviews"/>
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/recent_reviews_desc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-                android:text="@string/home_recent_reviews_desc"/>
+                <TextView
+                    android:id="@+id/recent_reviews_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:textStyle="bold"
+                    android:text="@string/recent_reviews"/>
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/recent_reviews_desc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                    android:text="@string/home_recent_reviews_desc"/>
 
-    </android.support.v7.widget.CardView>
+            </LinearLayout>
 
-    <include layout="@layout/footer"/>
+        </android.support.v7.widget.CardView>
 
-</RelativeLayout>
+        <include layout="@layout/footer"/>
+
+    </LinearLayout>
+</ScrollView>
