--- a/app/src/main/res/layout-v21/fragment_home.xml
+++ b/app/src/main/res/layout-v21/fragment_home.xml
@@ -26,8 +26,9 @@
             android:clickable="true"
             android:focusable="true"
             android:foreground="?android:attr/selectableItemBackground"
+            android:stateListAnimator="@animator/elevation"
             app:contentPadding="@dimen/activity_vertical_margin"
-            app:cardElevation="1dp"
+            app:cardElevation="0dp"
             app:cardCornerRadius="@dimen/activity_vertical_margin">
 
             <LinearLayout
@@ -67,8 +68,9 @@
             android:clickable="true"
             android:focusable="true"
             android:foreground="?android:attr/selectableItemBackground"
+            android:stateListAnimator="@animator/elevation"
             app:contentPadding="@dimen/activity_vertical_margin"
-            app:cardElevation="1dp"
+            app:cardElevation="0dp"
             app:cardCornerRadius="@dimen/activity_vertical_margin">
 
             <LinearLayout
@@ -108,8 +110,9 @@
             android:clickable="true"
             android:focusable="true"
             android:foreground="?android:attr/selectableItemBackground"
+            android:stateListAnimator="@animator/elevation"
             app:contentPadding="@dimen/activity_vertical_margin"
-            app:cardElevation="1dp"
+            app:cardElevation="0dp"
             app:cardCornerRadius="@dimen/activity_vertical_margin">
 
             <LinearLayout
