--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -16,12 +16,15 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/nav_find_books"
+            android:icon="@drawable/ic_nav_item_24dp"
             android:title="@string/find_books"/>
         <item
             android:id="@+id/nav_author_info"
+            android:icon="@drawable/ic_nav_item_24dp"
             android:title="@string/author_info"/>
         <item
             android:id="@+id/nav_recent_reviews"
+            android:icon="@drawable/ic_nav_item_24dp"
             android:title="@string/recent_reviews"/>
     </group>
 </menu>
