--- a/app/src/main/res/layout-v21/details_header.xml
+++ b/app/src/main/res/layout-v21/details_header.xml
@@ -9,7 +9,7 @@
 
     <FrameLayout
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="@dimen/details_header_height"
         android:layout_weight="1">
 
         <ImageView
