--- a/app/src/main/res/layout/fragment_recent_reviews.xml
+++ b/app/src/main/res/layout/fragment_recent_reviews.xml
@@ -3,9 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bgColor"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin">
+    android:background="@color/bgColor">
 
     <include layout="@layout/progress_screen"/>
 
@@ -13,7 +11,9 @@
         android:id="@+id/books_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"/>
 
     <include layout="@layout/error_screen"/>
 
