--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="details_margin">4dp</dimen>
     <dimen name="button_corner_radius">8dp</dimen>
+    <dimen name="vertical_margin">16dp</dimen>
+    <dimen name="details_header_height">100dp</dimen>
 </resources>
