--- a/app/src/main/res/layout-v21/details_header.xml
+++ b/app/src/main/res/layout-v21/details_header.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:transitionName="@string/card_transition"
+    android:transitionName="@string/card_transition_name"
     android:baselineAligned="false">
 
     <FrameLayout
