--- a/app/src/main/res/layout-v21/fragment_home.xml
+++ b/app/src/main/res/layout-v21/fragment_home.xml
@@ -34,6 +34,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="@dimen/home_card_padding"
+                android:paddingBottom="@dimen/home_card_padding"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -76,6 +78,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="@dimen/home_card_padding"
+                android:paddingBottom="@dimen/home_card_padding"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -118,6 +122,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="@dimen/home_card_padding"
+                android:paddingBottom="@dimen/home_card_padding"
                 android:gravity="center"
                 android:orientation="vertical">
 
