--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,6 +33,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="@dimen/home_card_padding"
+                android:paddingBottom="@dimen/home_card_padding"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -74,6 +76,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="@dimen/home_card_padding"
+                android:paddingBottom="@dimen/home_card_padding"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -115,6 +119,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="@dimen/home_card_padding"
+                android:paddingBottom="@dimen/home_card_padding"
                 android:gravity="center"
                 android:orientation="vertical">
 
