--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="activity_horizontal_margin">64dp</dimen>
     <dimen name="vertical_margin">32dp</dimen>
     <dimen name="details_header_height">150dp</dimen>
+    <dimen name="home_card_padding">8dp</dimen>
 </resources>
