--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="activity_horizontal_margin">80dp</dimen>
     <dimen name="vertical_margin">48dp</dimen>
     <dimen name="details_header_height">200dp</dimen>
+    <dimen name="home_card_padding">16dp</dimen>
 </resources>
