Adding styles for different screen sizes

--- a/app/src/main/res/layout-v21/fragment_home.xml
+++ b/app/src/main/res/layout-v21/fragment_home.xml
@@ -40,19 +40,18 @@
                 android:orientation="vertical">
 
                 <TextView
+                    style="@style/CardTitle"
                     android:id="@+id/find_books_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                    android:textStyle="bold"
                     android:text="@string/find_books"/>
 
                 <TextView
+                    style="@style/CardDescription"
                     android:id="@+id/find_books_desc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                     android:text="@string/home_find_books_desc"/>
 
             </LinearLayout>
@@ -84,19 +83,18 @@
                 android:orientation="vertical">
 
                 <TextView
+                    style="@style/CardTitle"
                     android:id="@+id/author_info_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                    android:textStyle="bold"
                     android:text="@string/author_info"/>
 
                 <TextView
+                    style="@style/CardDescription"
                     android:id="@+id/author_info_desc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                     android:text="@string/home_author_info_desc"/>
 
             </LinearLayout>
@@ -128,19 +126,18 @@
                 android:orientation="vertical">
 
                 <TextView
+                    style="@style/CardTitle"
                     android:id="@+id/recent_reviews_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                    android:textStyle="bold"
                     android:text="@string/recent_reviews"/>
 
                 <TextView
+                    style="@style/CardDescription"
                     android:id="@+id/recent_reviews_desc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                     android:text="@string/home_recent_reviews_desc"/>
 
             </LinearLayout>
